# vector-simd

./: README.md  vector-simd.cabal
benchmark/: xor.hs
cbits/: vector-simd.c
src/: test-corruption.hs
src/Data/Vector/: SIMD.hs
src/Data/Vector/SIMD/: Algorithms.hs  Mutable.hs
